k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component : web
  template:
    metadata:
      labels:
        component : web
    spec:
      containers:
        - name : client
          image: xgenosama/multi-client
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: 400Mi
              cpu: 200m
            requests:
              cpu: 100m
              memory: 200Mi
