k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  client-cluster-ip-service
  namespace: dev
spec:
  selector:
    component: web
  type: ClusterIP
  ports:
    - port:  3000
      targetPort:  3000
