k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  server-cluster-ip-service
  namespace: dev
spec:
  selector:
    component: server
  type: ClusterIP
  ports:
    - port:  5000
      targetPort:  5000
